# EvoPalantir

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: quality.yml
.husky/: pre-commit
AgentOS/: .env.example  .gitignore  pyproject.toml
AgentOS/docs/: README.md  charter.md  impl-manual.md
AgentOS/docs/decisions/: 0001-v09-arch-redesign.md
AgentOS/docs/plans/2026-03-19-agentos-foundation/: design.md  plan.md
AgentOS/docs/plans/2026-03-19-aos-runtime/: design.md  plan.md
AgentOS/docs/plans/2026-03-19-v09-arch-redesign/: plan.md
AgentOS/docs/plans/2026-03-20-v09-implementation/: plan.md
AgentOS/docs/references/: agent-skills-docs.md
AgentOS/src/aos/: __init__.py  __main__.py  cli.py
AgentOS/src/aos/compute/: __init__.py  react_unit.py
AgentOS/src/aos/control/: __init__.py  plane.py
AgentOS/src/aos/event/: __init__.py  bus.py
AgentOS/src/aos/hook/: __init__.py  admission.py  engine.py  permissions.py  transform.py
AgentOS/src/aos/model/: __init__.py  common.py  context.py  control_block.py  history.py  response.py  runtime.py
AgentOS/src/aos/sdk/: __init__.py  aos_sdk.py  plugin_context.py
AgentOS/src/aos/skill/: __init__.py  defaults.py  index.py
AgentOS/src/aos/store/: __init__.py  sqlite.py
AgentOS/src/aos/tool/: __init__.py  executor.py
AgentOS/tests/: conftest.py  test_cli.py
AgentOS/tests/compute/: test_react_unit.py
AgentOS/tests/control/: test_aoscp_surface.py  test_command_query_split.py  test_runtime.py
AgentOS/tests/e2e/: test_real_llm.py
AgentOS/tests/event/: test_bus.py  test_runtime_events.py
AgentOS/tests/hook/: test_admission_hooks.py  test_engine.py  test_transform_hooks.py
AgentOS/tests/integration/: test_multi_agent_isolation.py
AgentOS/tests/model/: test_control_blocks.py  test_response.py
AgentOS/tests/resource/: test_resource_ops.py
AgentOS/tests/session/: test_dispatch_async.py  test_fold_placeholder.py  test_loop.py  test_materialize.py
AgentOS/tests/skill/: test_capability_manifest.py  test_discovery.py  test_plugin_runtime.py
AgentOS/tests/store/: test_sqlite_store.py
AgentOS/tests/tool/: test_executor.py
AgentOS_Test/: prompt.txt  pyproject.toml
apps/web/: .gitignore  (+3 more)
docs/: README.md  aos-charter.md
(+99 files in other folders)
