[project]
authors = [{name = "Huafucius"}]
dependencies = []
name = "AgentOS"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.tasks]
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format . --check"
typecheck = "pyright"
test = "pytest"
quality = { depends-on = ["lint", "format-check", "typecheck"] }

[tool.pixi.dependencies]
python = "3.11.*"
ruff = ">=0.15.5,<0.16"
pyright = ">=1.1.408,<2"
pytest = ">=9.0.2,<10"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
exclude = [".pixi", ".pytest_cache", ".ruff_cache"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "-q"
